[package]
name = "typer"
version = "0.1.0"
authors = ["Krovspei Stepan <shtefanrpg@gmail.com>"]

[dependencies]
xml-rs = "0.8.0"
rusttype = "0.7.3"

[dev-dependencies]
image = "0.20.1"

[[example]]
name = "example-1"
[[example]]
name = "example-2"
[[example]]
name = "example-3"
[[example]]
name = "example-4"
[[example]]
name = "example-5"

[profile.dev]
opt-level = 2