[package]
name = "typer"
version = "0.1.1"
authors = ["Krovspei Stepan <shtefanrpg@gmail.com>"]
exclude = [
    "assets/*",
    "examples/*",
    "fonts/*",
]

description = "Typer - simple text rendering library, with some additional features."
repository = "https://github.com/curiosus-stefan/typer"
readme = "README.md"
license = "MIT"
keywords = ["font", "rendering", "layout", "text"]
categories = ["gui"]


[dependencies]
xml-rs = "0.8.0"
rusttype = "0.7.3"

[dev-dependencies]
image = "0.20.1"

[[example]]
name = "example-1"
[[example]]
name = "example-2"
[[example]]
name = "example-3"
[[example]]
name = "example-4"
[[example]]
name = "example-5"

[profile.dev]
opt-level = 2